--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body, h1, h2, p, ul, li {
 }
 
 .header {
-    height: 100vh; /* Full viewport height */
+    height: 100vh;
     color: #000;
     text-align: center;
     display: flex;
@@ -41,7 +41,7 @@ body, h1, h2, p, ul, li {
     background: rgba(255, 255, 255, 0.4);
     border: 1.5px solid #D9D9D9;
     border-radius: 10px;
-    width: 76%;
+    width: 78%;
     margin: 12px auto;
 }
 
@@ -85,7 +85,7 @@ body, h1, h2, p, ul, li {
 
 .nav-links a {
     text-decoration: none;
-    color: #333;
+    color: #1d1d1d;
     font-size: 18px;
 }
 
@@ -97,7 +97,7 @@ body, h1, h2, p, ul, li {
     padding: 9px 17px;
     border: none;
     border-radius: 13px;
-    border: 1px solid #d3d3d3;
+    border: 0.5px solid #d3d3d3;
     background-color: #000;
     color: #fff;
     font-size: 18px;
@@ -109,14 +109,14 @@ body, h1, h2, p, ul, li {
 
 .nav-button:hover {
     background-color: #fff;
-    color: #000;
+    color: #000;    
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    transform: scale(1.2);
+    transform: scale(1.1);
     font-weight: 600;
 }
 
 .hero-section {
-    flex: 1; /* Allow the hero section to take up remaining space */
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -124,7 +124,7 @@ body, h1, h2, p, ul, li {
 }
 
 .hero-section h1 {
-    margin-top: 0; /* Remove default margin */
+    margin-top: 0;
     color: #1E1F2A;
     font-size: 92px;
     font-family: 'Roboto';
@@ -340,16 +340,25 @@ body, h1, h2, p, ul, li {
     text-decoration: underline;
 }
 
-.footer-logo {
-    width: 100px;
-    height: 100px;
-    margin-top: 10px;
+.follow-section a{
+    color: #ffffff;
+    text-decoration: none;
 }
 
-.social-icons a {
-    color: #fff;
-    font-size: 24px;
-    margin-right: 15px;
+.follow-section a:hover {
+    text-decoration: underline;
+    color:#aaa;
+}
+
+.footer-logo {
+    width: 90px;
+    height: 90px;
+}
+
+.follow-section .social-icons a{
+    color: #ffffff;
+    font-size: 25px;
+    margin-right: 5px;
 }
 
 .social-icons a:hover {
